--- a/Customer/payment.html
+++ b/Customer/payment.html
@@ -114,14 +114,18 @@
                                 </div>
                                 <div class="form-group col-md-6">
                                     <label for="inputExpiration">Expiration</label>
-                                    <input type="text" class="form-control" id="inputExpiration" placeholder="MM/YY">
+                                    <div class="d-flex justify-content-stretch align-items-center">
+                                        <input type="text" class="form-control" id="inputExpirationMM" placeholder="MM">
+                                        <span class="mx-2">/</span>
+                                        <input type="text" class="form-control" id="inputExpirationYY" placeholder="YY">
+                                    </div>
+
                                 </div>
                             </div>
 
                             <div class="form-group">
                                 <label for="inputCardName">Card Name</label>
-                                <input type="text" class="form-control" id="inputCardName"
-                                    placeholder="Your Name">
+                                <input type="text" class="form-control" id="inputCardName" placeholder="Your Name">
                             </div>
                             <div class="form-group">
                                 <label for="inputEmail">Email</label>
@@ -142,11 +146,13 @@
                             </div>
                         </form>
                     </div>
-                    <div class="col-12 col-lg-4  d-flex justify-content-center align-items-center border-left-lg order-invoice-wrapper flex-column">
+                    <div
+                        class="col-12 col-lg-4  d-flex justify-content-center align-items-center border-left-lg order-invoice-wrapper flex-column">
                         <button class="btn nz-btn-gold btn-block font-weight-bold py-3">
                             <i class="fab mr-1 fa-paypal"></i> PayPal
                         </button>
-                        <div class="d-block d-sm-none my-5 py-5 display-4 w-100 text-center border-top border-bottom">OR</div>
+                        <div class="d-block d-sm-none my-5 py-5 display-4 w-100 text-center border-top border-bottom">OR
+                        </div>
 
                     </div>
                 </div>
