Multi form done

--- a/Customer/multistepmode.html
+++ b/Customer/multistepmode.html
@@ -304,7 +304,6 @@
                             </div>
 
                             <div class="btn-group d-flex flex-wrap flex-row p-0 justify-content-center" role="group"
-                                <div class="btn-group d-flex flex-wrap flex-row p-0 justify-content-center" role="group"
                                 aria-label="Basic example">
                                 <button class="btn btn-outline-warning m-2 "><span>100</span></button>
                                 <button class="btn btn-warning m-2 "><span>200</span></button>
@@ -342,41 +341,52 @@
                                     </div>
                                 </div>
                             </div>
-
-
                         </div>
                         <div class="tab-pane fade" id="confidentialityAgreement" role="tabpanel"
-                            aria-labelledby="confidentialityAgreement-tab">confidentialityAgreement-tab...</div>
+                            aria-labelledby="confidentialityAgreement-tab">
+                            <div class="custom-control custom-checkbox text-center">
+                                <input type="checkbox" class="custom-control-input" id="customCheck1">
+                                <label class="custom-control-label" for="customCheck1">Confidentiality Agreement is
+                                    required</label>
+                            </div>
+
+                        </div>
                         <div class="tab-pane fade" id="specialInstructions" role="tabpanel"
                             aria-labelledby="specialInstructions-tab">
                             <div class="container">
-
-                                <div class="row">
-                                    <div class="col-12 col-md-12">
-                                        <div class="form-group">
-                                            <label for="exampleFormControlTextarea1">Special Instructions </label>
-                                            <textarea class="form-control" id="exampleFormControlTextarea1"
-                                                rows="5"></textarea>
+                                <div class="container">
+                                    <div class="row">
+                                        <div class="col-12 col-md-12">
+                                            <div class="form-group">
+                                                <label for="exampleFormControlTextarea1">Special Instructions </label>
+                                                <textarea class="form-control" id="exampleFormControlTextarea1"
+                                                    rows="5"></textarea>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="tab-pane fade" id="requiredSample" role="tabpanel"
-                                aria-labelledby="requiredSample-tab">
-                                requiredSample-tab...</div>
                         </div>
-                        <div class="row mt-5">
-
-                            <div class="col-12 col-lg-4 offset-lg-8">
-                                <a href="placeOrderSuccess.html"
-                                    class="btn nz-btn-gold btn-block  text-uppercase font-weight-bold">Submit
-                                    Order</a>
+                        <div class="tab-pane fade" id="requiredSample" role="tabpanel"
+                            aria-labelledby="requiredSample-tab">
+                            <div class="custom-control custom-checkbox text-center">
+                                <input type="checkbox" class="custom-control-input" id="customCheck1">
+                                <label class="custom-control-label" for="customCheck1">Samples are required</label>
                             </div>
                         </div>
                     </div>
+                    <div class="row mt-5">
 
+                        <div class="col-12 col-lg-4 offset-lg-8">
+                            <a href="placeOrderSuccess.html"
+                                class="btn nz-btn-gold btn-block  text-uppercase font-weight-bold">Submit
+                                Order</a>
+                        </div>
+                    </div>
                 </div>
+
             </div>
+        </div>
     </section>
 
     <footer class="section-footer pt-5">
