Help card in dashbord

--- a/Customer/dashboad.html
+++ b/Customer/dashboad.html
@@ -313,6 +313,20 @@
                             </div>
                             <div class="col-12 col-lg-6 offset-lg-1">
                                 <h1 class="section-title-side"><span>Need Help</span></h1>
+                                <div class="row">
+                                    <div class="col-12">
+                                        <div class="card">
+                                            <img src="../assets/images/hiw_item3.png" class="card-img-top" alt="...">
+                                            <div class="card-body">
+                                                <h5 class="card-title">Help Card title</h5>
+                                                <p class="card-text">Some quick example text to build on the card title
+                                                    and make up the bulk of the card's content.</p>
+                                                <a href="#" class="btn nz-btn-gold">Learn More</a>
+                                            </div>
+                                        </div>
+
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
