--- a/Customer/help.html
+++ b/Customer/help.html
@@ -98,7 +98,7 @@
                 </div>
             </div>
             <div class="col-12 col-lg-9 shadow p-5">
-                <h1 class="section-title-side"><span>Blank</span></h1>
+                <h1 class="section-title-side"><span>Help Center</span></h1>
             </div>
         </div>
     </section>
