--- a/Customer/multistepmode.html
+++ b/Customer/multistepmode.html
@@ -92,7 +92,7 @@
                         <i class="far fa-address-card fa-2x mr-2"></i>
                         <span>Account</span>
                     </a>
-                    <a href="blank.html" class="list-group-item list-group-item-action ">
+                    <a href="help.html" class="list-group-item list-group-item-action ">
                         <i class="far fa-question-circle fa-2x mr-2"></i>
                         <span>Help</span>
                     </a>
