redirict to Help item page

--- a/Customer/dashboad.html
+++ b/Customer/dashboad.html
@@ -321,7 +321,7 @@
                                                 <h5 class="card-title">Help Card title</h5>
                                                 <p class="card-text">Some quick example text to build on the card title
                                                     and make up the bulk of the card's content.</p>
-                                                <a href="#" class="btn nz-btn-gold">Learn More</a>
+                                                <a href="helpItem.html" class="btn nz-btn-gold">Learn More</a>
                                             </div>
                                         </div>
 
