--- a/Customer/orderDetails.html
+++ b/Customer/orderDetails.html
@@ -65,6 +65,7 @@
                     </li>
                 </ul>
             </div>
+        </nav>
     </section>
 
     <section class="section-main container-fluid">
@@ -157,49 +158,51 @@
                     <div class="col-12 mb-4 col-md-4 order-updates-wrapper">
                         <h1 class="section-title-side"><span>Updates</span></h1>
                         <div class="updates-wrapper">
-                            <div class="pudates-me">
-                                <small class=" d-flex justify-content-end">3 days ago</small>
-                                <p class="mb-2"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. </p>
-                            </div>
-                            <div class="pudates-other">
-                                <small class=" d-flex justify-content-end">3 days ago</small>
-                                <p class="mb-2"> Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
-                            </div>
-                            <div class="pudates-other">
-                                <small class=" d-flex justify-content-end">3 days ago</small>
-                                <p class="mb-2">Lorem ipsum dolor sit amet consectetur.</p>
-                                <ul class="list-inline">
-                                    <li class="list-inline-item">
-                                        <div class="btn btn-outline-dark d-flex flex-column align-items-center m-1">
-                                            <i class="far fa-file"></i>
-                                            <p class="m-0 small">bdudj.docx</p>
-                                        </div>
-                                    </li>
-                                    <li class="list-inline-item">
-                                        <div class="btn btn-outline-dark d-flex flex-column align-items-center m-1">
-                                            <i class="far fa-file"></i>
-                                            <p class="m-0 small">bdudj.docx</p>
-                                        </div>
-                                    </li>
-                                    <li class="list-inline-item">
-                                        <div class="btn btn-outline-dark d-flex flex-column align-items-center m-1">
-                                            <i class="far fa-file"></i>
-                                            <p class="m-0 small">bdudj.docx</p>
-                                        </div>
-                                    </li>
-                                    <li class="list-inline-item">
-                                        <div class="btn btn-outline-dark d-flex flex-column align-items-center m-1">
-                                            <i class="far fa-file"></i>
-                                            <p class="m-0 small">bdudj.docx</p>
-                                        </div>
-                                    </li>
-                                    <li class="list-inline-item">
-                                        <div class="btn btn-outline-dark d-flex flex-column align-items-center m-1">
-                                            <i class="far fa-file"></i>
-                                            <p class="m-0 small">bdudj.docx</p>
-                                        </div>
-                                    </li>
-                                </ul>
+                            <div class="order-updates-list mb-3">
+                                <div class="pudates-me">
+                                    <small class=" d-flex justify-content-end">3 days ago</small>
+                                    <p class="mb-2"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. </p>
+                                </div>
+                                <div class="pudates-other">
+                                    <small class=" d-flex justify-content-end">3 days ago</small>
+                                    <p class="mb-2"> Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                                </div>
+                                <div class="pudates-other">
+                                    <small class=" d-flex justify-content-end">3 days ago</small>
+                                    <p class="mb-2">Lorem ipsum dolor sit amet consectetur.</p>
+                                    <ul class="list-inline">
+                                        <li class="list-inline-item">
+                                            <div class="btn btn-outline-dark d-flex flex-column align-items-center m-1">
+                                                <i class="far fa-file"></i>
+                                                <p class="m-0 small">bdudj.docx</p>
+                                            </div>
+                                        </li>
+                                        <li class="list-inline-item">
+                                            <div class="btn btn-outline-dark d-flex flex-column align-items-center m-1">
+                                                <i class="far fa-file"></i>
+                                                <p class="m-0 small">bdudj.docx</p>
+                                            </div>
+                                        </li>
+                                        <li class="list-inline-item">
+                                            <div class="btn btn-outline-dark d-flex flex-column align-items-center m-1">
+                                                <i class="far fa-file"></i>
+                                                <p class="m-0 small">bdudj.docx</p>
+                                            </div>
+                                        </li>
+                                        <li class="list-inline-item">
+                                            <div class="btn btn-outline-dark d-flex flex-column align-items-center m-1">
+                                                <i class="far fa-file"></i>
+                                                <p class="m-0 small">bdudj.docx</p>
+                                            </div>
+                                        </li>
+                                        <li class="list-inline-item">
+                                            <div class="btn btn-outline-dark d-flex flex-column align-items-center m-1">
+                                                <i class="far fa-file"></i>
+                                                <p class="m-0 small">bdudj.docx</p>
+                                            </div>
+                                        </li>
+                                    </ul>
+                                </div>
                             </div>
 
                             <div class="add-update-wrapper">
