--- a/provider/orders.html
+++ b/provider/orders.html
@@ -92,7 +92,7 @@
                 </div>
             </div>
             <div class="col-12 col-lg-10 shadow py-4">
-                <h1 class="section-title-side"><span>Blank</span></h1>
+                <h1 class="section-title-side"><span>Orders List</span></h1>
                 <ul class="list-group">
                     <li class="list-group-item order-card my-2"> <a href="orderDetails.html"
                             class="py-3 d-flex flex-column flex-sm-column flex-md-row justify-content-between align-items-center text-dark text-decoration-none"><span
