--- a/Customer/dashboad.html
+++ b/Customer/dashboad.html
@@ -129,7 +129,7 @@
 
                     <div class="col-12 mb-4 col-lg-6 offset-lg-1">
                         <h1 class="section-title-side"><span>Invoices</span></h1>
-                        <ul class="list-group recent-odrder-list">
+                        <ul class="list-group recent-order-list">
                             <li class="list-group-item card-hover my-2">
                                 <a href="invoiceDetails.html"
                                     class="py-3 d-flex flex-column flex-sm-column flex-md-row justify-content-between align-items-center text-dark text-decoration-none">
@@ -229,7 +229,7 @@
                         <div class="row mt-5">
                             <div class="col-12 col-lg-5">
                                 <h1 class="section-title-side"><span>Recent orders</span></h1>
-                                <ul class="recent-odrder-list list-group">
+                                <ul class="recent-order-list list-group">
                                     <li class="list-group-item order-card my-2"> <a href="orderDetails.html"
                                             class="py-3 d-flex flex-column flex-sm-column flex-md-row justify-content-between align-items-center text-dark text-decoration-none"><span
                                                 class="align-self-start font-weight-bold"><i
