--- a/provider/account.html
+++ b/provider/account.html
@@ -356,7 +356,27 @@
                                         </div>
                                     </div>
                                 </div>
-                                <a href="/singup.html" class="d-block pt-3 nz-text-gold">Add another Service +</a>
+                                <div class="mt-3">
+                                    <div class="card-headers bg-white" id="headingThree">
+                                        <h5 class="mb-0">
+                                            <button class="btn btn-link text-warning collapsed" data-toggle="collapse"
+                                                data-target="#collapseAddAnotherServices" aria-expanded="false"
+                                                aria-controls="collapseAddAnotherServices">
+                                                Add another Service +
+                                            </button>
+                                        </h5>
+                                    </div>
+                                    <div id="collapseAddAnotherServices" class="collapse" aria-labelledby="headingThree"
+                                        data-parent="#accordion">
+                                        <div class="card-body">
+                                            <div class=" my-2 d-flex flex-column justify-content-end align-items-end">
+                                                <input type="text" class="form-control" id="firstName"
+                                                    placeholder="Try not to exceed the estimated amount" required>
+                                                    <a href="servicePage.html" class="mt-3 nz-btn-gold btn disabled">Send Request</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
 
                             </div>
                         </div>
