--- a/provider/orderDetails.html
+++ b/provider/orderDetails.html
@@ -92,8 +92,235 @@
                 </div>
             </div>
             <div class="col-12 col-lg-10 shadow py-4">
-                <h1 class="section-title-side"><span>Blank</span></h1>
+                <h1 class="section-title-side"><span>Order #78476347932</span></h1>
+                <div class="row">
 
+                    <div class="col-12 mb-4 col-md-8 order-details-wrapper">
+                        <!-- <h1 class="section-title-side"><span>Order Details</span></h1> -->
+                        <div class="form-group row">
+                            <label class="col-3">Selected service</label>
+                            <label class="col-12 col-md-9">
+                                <div class="lead font-weight-bold">
+                                    Legal Translation <span class="font-weight-normal"> (Arabic => German) </span>
+                                </div>
+                            </label>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-3">Estmated Budget</label>
+                            <div class="col-12 col-md-9">
+                                <div class="lead">600 EGP</div>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-3">Additional Service</label>
+                            <div class="col-12 col-md-9">
+                                <span class="badge badge-pill badge-warning mr-2">accusantium</span>
+                                <span class="badge badge-pill badge-warning mr-2">Lorem ipsum</span>
+                                <span class="badge badge-pill badge-warning mr-2">Warning</span>
+                                <span class="badge badge-pill badge-warning mr-2">quidem amet adipisci
+                                    laudantium</span>
+                                <span class="badge badge-pill badge-warning mr-2">ea maiores nulla</span>
+                                <span class="badge badge-pill badge-warning mr-2">Lorem ipsum</span>
+                                <span class="badge badge-pill badge-warning mr-2">quidem amet adipisci
+                                    laudantium</span>
+                                <span class="badge badge-pill badge-warning mr-2">ea maiores nulla</span>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-3">Confidentiality Agreement</label>
+                            <label class="col-12 col-md-9">Not Required</label>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-3">Required Sample</label>
+                            <label class="col-12 col-md-9">Required</label>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-3">Creation Date</label>
+                            <label class="col-12 col-md-9">8/21/2019 11:53:36 AM</label>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-3">Special Instructions</label>
+                            <label class="col-12 col-md-9">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                                Numquam
+                                quidem amet adipisci laudantium, eius vel sint sequi accusantium repudiandae ipsam
+                                consequatur ea maiores nulla ipsa quam earum perspiciatis perferendis tempora.
+                            </label>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-3">Files</label>
+                            <div class="col-12 col-md-9">
+                                <ul class="list-inline">
+                                    <li class="list-inline-item">
+                                        <div
+                                            class="btn btn-outline-dark btn-lg d-flex flex-column align-items-center m-1">
+                                            <i class="far fa-file"></i>
+                                            <p class="m-0 small">bdudj.docx</p>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-3">Recived Files</label>
+                            <div class="col-12 col-md-9">
+                                <ul class="list-inline">
+                                    <li class="list-inline-item">
+                                        <div
+                                            class="btn btn-outline-dark btn-lg d-flex flex-column align-items-center m-1">
+                                            <i class="far fa-file"></i>
+                                            <p class="m-0 small">bdudj.docx</p>
+                                        </div>
+                                    </li>
+                                    <li class="list-inline-item">
+                                        <div
+                                            class="btn btn-outline-dark btn-lg d-flex flex-column align-items-center m-1">
+                                            <i class="far fa-file"></i>
+                                            <p class="m-0 small">bdudj.docx</p>
+                                        </div>
+                                    </li>
+                                    <li class="list-inline-item">
+                                        <div
+                                            class="btn btn-outline-dark btn-lg d-flex flex-column align-items-center m-1">
+                                            <i class="far fa-file"></i>
+                                            <p class="m-0 small">bdudj.docx</p>
+                                        </div>
+                                    </li>
+                                    <li class="list-inline-item">
+                                        <div
+                                            class="btn btn-outline-dark btn-lg d-flex flex-column align-items-center m-1">
+                                            <i class="far fa-file"></i>
+                                            <p class="m-0 small">bdudj.docx</p>
+                                        </div>
+                                    </li>
+                                    <li class="list-inline-item">
+                                        <div
+                                            class="btn btn-outline-dark btn-lg d-flex flex-column align-items-center m-1">
+                                            <i class="far fa-file"></i>
+                                            <p class="m-0 small">bdudj.docx</p>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-12 mb-4 col-md-4 order-updates-wrapper">
+                        <h1 class="section-title-side"><span>Updates</span></h1>
+                        <div class="updates-wrapper">
+                            <div class="order-updates-list mb-3">
+                                <div class="pudates-me">
+                                    <small class=" d-flex justify-content-end">3 days ago</small>
+                                    <p class="mb-2"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. </p>
+                                </div>
+                                <div class="pudates-other">
+                                    <small class=" d-flex justify-content-end">3 days ago</small>
+                                    <p class="mb-2"> Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                                </div>
+                                <div class="pudates-other">
+                                    <small class=" d-flex justify-content-end">3 days ago</small>
+                                    <p class="mb-2">Lorem ipsum dolor sit amet consectetur.</p>
+                                    <ul class="list-inline">
+                                        <li class="list-inline-item">
+                                            <div class="btn btn-outline-dark d-flex flex-column align-items-center m-1">
+                                                <i class="far fa-file"></i>
+                                                <p class="m-0 small">bdudj.docx</p>
+                                            </div>
+                                        </li>
+                                        <li class="list-inline-item">
+                                            <div class="btn btn-outline-dark d-flex flex-column align-items-center m-1">
+                                                <i class="far fa-file"></i>
+                                                <p class="m-0 small">bdudj.docx</p>
+                                            </div>
+                                        </li>
+                                        <li class="list-inline-item">
+                                            <div class="btn btn-outline-dark d-flex flex-column align-items-center m-1">
+                                                <i class="far fa-file"></i>
+                                                <p class="m-0 small">bdudj.docx</p>
+                                            </div>
+                                        </li>
+                                        <li class="list-inline-item">
+                                            <div class="btn btn-outline-dark d-flex flex-column align-items-center m-1">
+                                                <i class="far fa-file"></i>
+                                                <p class="m-0 small">bdudj.docx</p>
+                                            </div>
+                                        </li>
+                                        <li class="list-inline-item">
+                                            <div class="btn btn-outline-dark d-flex flex-column align-items-center m-1">
+                                                <i class="far fa-file"></i>
+                                                <p class="m-0 small">bdudj.docx</p>
+                                            </div>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+
+                            <div class="add-update-wrapper">
+                                <div class="form-group">
+                                    <textarea class="form-control border-warning rounded-pill "
+                                        id="exampleFormControlTextarea1" rows="3"></textarea>
+                                    <div class="custom-file rounded-pill my-2">
+                                        <input type="file" class="custom-file-input rounded-pill " id="customFile">
+                                        <label class="custom-file-label rounded-pill " for="customFile">Add
+                                            Attachment</label>
+                                    </div>
+                                    <ul class="files-list list-inline d-flex flex-row flex-wrap ">
+                                        <li
+                                            class="file-item list-inline-item d-flex flex-row mt-1 badge badge-pill badge-warning">
+                                            <div class=" d-flex flex-column align-items-center m-1">
+                                                <i class="far fa-file"></i>
+                                                <p class="m-0 small">bdudj.docx</p>
+                                            </div>
+                                            <button type="button" class="px-1 close" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </li>
+                                        <li
+                                            class="file-item list-inline-item d-flex flex-row mt-1 badge badge-pill badge-warning">
+                                            <div class=" d-flex flex-column align-items-center m-1">
+                                                <i class="far fa-file"></i>
+                                                <p class="m-0 small">bdudj.docx</p>
+                                            </div>
+                                            <button type="button" class="px-1 close" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </li>
+                                        <li
+                                            class="file-item list-inline-item d-flex flex-row mt-1 badge badge-pill badge-warning">
+                                            <div class=" d-flex flex-column align-items-center m-1">
+                                                <i class="far fa-file"></i>
+                                                <p class="m-0 small">bdudj.docx</p>
+                                            </div>
+                                            <button type="button" class="px-1 close" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </li>
+                                        <li
+                                            class="file-item list-inline-item d-flex flex-row mt-1 badge badge-pill badge-warning">
+                                            <div class=" d-flex flex-column align-items-center m-1">
+                                                <i class="far fa-file"></i>
+                                                <p class="m-0 small">bdudj.docx</p>
+                                            </div>
+                                            <button type="button" class="px-1 close" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </li>
+                                        <li
+                                            class="file-item list-inline-item d-flex flex-row mt-1 badge badge-pill badge-warning">
+                                            <div class=" d-flex flex-column align-items-center m-1">
+                                                <i class="far fa-file"></i>
+                                                <p class="m-0 small">bdudj.docx</p>
+                                            </div>
+                                            <button type="button" class="px-1 close" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </li>
+                                    </ul>
+                                    <div class="btn btn-block btn-dark rounded-pill">Submit</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
