--- a/provider/orders.html
+++ b/provider/orders.html
@@ -94,7 +94,8 @@
             <div class="col-12 col-lg-10 shadow py-4">
                 <h1 class="section-title-side"><span>Orders List</span></h1>
                 <ul class="list-group">
-                    <li class="list-group-item order-card my-2"> <a href="orderDetails.html"
+                    <li class="list-group-item order-card my-2">
+                        <a href="orderDetails.html"
                             class="py-3 d-flex flex-column flex-sm-column flex-md-row justify-content-between align-items-center text-dark text-decoration-none"><span
                                 class="align-self-start font-weight-bold"><i
                                     class="fas fa-chevron-circle-right mr-2"></i>#78476347932</span>
@@ -102,7 +103,55 @@
                             <span>Arabic => German</span>
                             <span>300 USD</span>
                             <span>8/21/2019 11:53:36 AM</span>
-                            <span class=" badge badge-pill badge-warning align-self-end">Receive Bids</span>
+                            <span class=" badge badge-pill badge-warning align-self-end">Started</span>
+                        </a>
+                    </li>
+                    <li class="list-group-item order-card my-2">
+                        <a href="orderDetails.html"
+                            class="py-3 d-flex flex-column flex-sm-column flex-md-row justify-content-between align-items-center text-dark text-decoration-none"><span
+                                class="align-self-start font-weight-bold"><i
+                                    class="fas fa-chevron-circle-right mr-2"></i>#78476347932</span>
+                            <span>Legal Translation</span>
+                            <span>Arabic => German</span>
+                            <span>300 USD</span>
+                            <span>8/21/2019 11:53:36 AM</span>
+                            <span class=" badge badge-pill badge-success align-self-end">completed</span>
+                        </a>
+                    </li>
+                    <li class="list-group-item order-card my-2">
+                        <a href="orderDetails.html"
+                            class="py-3 d-flex flex-column flex-sm-column flex-md-row justify-content-between align-items-center text-dark text-decoration-none"><span
+                                class="align-self-start font-weight-bold"><i
+                                    class="fas fa-chevron-circle-right mr-2"></i>#78476347932</span>
+                            <span>Legal Translation</span>
+                            <span>Arabic => German</span>
+                            <span>300 USD</span>
+                            <span>8/21/2019 11:53:36 AM</span>
+                            <span class=" badge badge-pill badge-dark align-self-end">Canceled</span>
+                        </a>
+                    </li>
+                    <li class="list-group-item order-card my-2">
+                        <a href="orderDetails.html"
+                            class="py-3 d-flex flex-column flex-sm-column flex-md-row justify-content-between align-items-center text-dark text-decoration-none"><span
+                                class="align-self-start font-weight-bold"><i
+                                    class="fas fa-chevron-circle-right mr-2"></i>#78476347932</span>
+                            <span>Legal Translation</span>
+                            <span>Arabic => German</span>
+                            <span>300 USD</span>
+                            <span>8/21/2019 11:53:36 AM</span>
+                            <span class=" badge badge-pill badge-warning align-self-end">Reciced updates</span>
+                        </a>
+                    </li>
+                    <li class="list-group-item order-card my-2">
+                        <a href="orderDetails.html"
+                            class="py-3 d-flex flex-column flex-sm-column flex-md-row justify-content-between align-items-center text-dark text-decoration-none"><span
+                                class="align-self-start font-weight-bold"><i
+                                    class="fas fa-chevron-circle-right mr-2"></i>#78476347932</span>
+                            <span>Legal Translation</span>
+                            <span>Arabic => German</span>
+                            <span>300 USD</span>
+                            <span>8/21/2019 11:53:36 AM</span>
+                            <span class=" badge badge-pill badge-warning align-self-end">Started</span>
                         </a>
                     </li>
                 </ul>
