set login to SP dashboard

--- a/login.html
+++ b/login.html
@@ -91,7 +91,7 @@
                                 </div>
                             </div>
                             <!-- <a href="provider/dashboard.html" class="btn btn-block nz-btn-gold btn-lg text-uppercase font-weight-normal" -->
-                            <a href="provider/blank.html" class="btn btn-block nz-btn-gold btn-lg text-uppercase font-weight-normal"
+                            <a href="provider/dashboad.html" class="btn btn-block nz-btn-gold btn-lg text-uppercase font-weight-normal"
                                 >Login</a>
                         </div>
                     </form>
