Add filters and finaice

--- a/Customer/orders.html
+++ b/Customer/orders.html
@@ -100,6 +100,52 @@
             </div>
             <div class="col-12 col-lg-10 shadow py-4">
                 <h1 class="section-title-side"><span>Orders List</span></h1>
+                <div class="row mb-4">
+                    <div class="col-12 col-md-6 col-lg-4 my-2">
+                        <div
+                            class="dropdown d-flex align-items-md-center align-items-start  justify-content-between flex-column flex-md-row">
+                            <span class="mr-4">Date</span>
+                            <button class="btn btn-secondary  dropdown-toggle flex-fill w-100" type="button" id="dropdownMenuButton"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Recent to Older
+                            </button>
+                            <div class="dropdown-menu w-100" aria-labelledby="dropdownMenuButton">
+                                <a class="dropdown-item active" href="#">Recent to Older</a>
+                                <a class="dropdown-item" href="#">Older to Recent</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 my-2">
+                        <div
+                            class="dropdown d-flex align-items-md-center align-items-start  justify-content-between flex-column flex-md-row">
+                            <span class="mr-4">Service</span>
+                            <button class="btn btn-secondary  dropdown-toggle flex-fill w-100" type="button" id="dropdownMenuButton"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Translation
+                            </button>
+                            <div class="dropdown-menu w-100" aria-labelledby="dropdownMenuButton">
+                                <a class="dropdown-item active" href="#">Recent to Older</a>
+                                <a class="dropdown-item" href="#">Older to Recent</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 my-2">
+                        <div
+                            class="dropdown d-flex align-items-md-center align-items-start  justify-content-between flex-column flex-md-row">
+                            <span class="mr-4">Status</span>
+                            <button class="btn btn-secondary  dropdown-toggle flex-fill w-100" type="button" id="dropdownMenuButton"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                All
+                            </button>
+                            <div class="dropdown-menu w-100" aria-labelledby="dropdownMenuButton">
+                                <a class="dropdown-item active" href="#">Recent to Older</a>
+                                <a class="dropdown-item" href="#">Older to Recent</a>
+                            </div>
+                        </div>
+                    </div>
+                
+                    <div class="col-12 col-md-6 col-lg-4 my-2"></div>
+                </div>
                 <ul class="list-group">
                     <li class="list-group-item order-card my-2"> <a href="orderDetails.html"
                             class="py-3 d-flex flex-column flex-sm-column flex-md-row justify-content-between align-items-center text-dark text-decoration-none"><span
