--- a/provider/account.html
+++ b/provider/account.html
@@ -136,15 +136,20 @@
                                                 id="loginpassword" placeholder="Confirm your passowrd" required>
                                         </div>
                                     </div>
-                                    <div class="form-row">
+                                    <div class="form-row mt-3">
                                         <a href="Customer/dashboad.html"
-                                            class="btn btn-block nz-btn-gold btn-lg text-uppercase font-weight-normal">Save
-                                            Changes</a>
+                                            class="btn btn-block nz-btn-gold btn-lg text-uppercase font-weight-normal">
+                                            Save Changes
+                                        </a>
                                     </div>
                                 </form>
                             </div>
                         </div>
-
+                        <div class="card rounded-lg shadow mt-4">
+                            <div class="card-body">
+                                <h1 class="section-title-side"><span>Settings</span></h1>
+                            </div>
+                        </div>
                     </div>
                     <div class="col-12 col-lg-6">
                         <div class="card rounded-lg shadow">
@@ -372,7 +377,9 @@
                                             <div class=" my-2 d-flex flex-column justify-content-end align-items-end">
                                                 <input type="text" class="form-control" id="firstName"
                                                     placeholder="Try not to exceed the estimated amount" required>
-                                                    <a href="servicePage.html" class="mt-3 nz-btn-gold btn disabled">Send Request</a>
+                                                <a href="servicePage.html" class="mt-3 nz-btn-gold btn disabled">
+                                                    Send Request
+                                                </a>
                                             </div>
                                         </div>
                                     </div>
