--- a/provider/bids.html
+++ b/provider/bids.html
@@ -92,7 +92,53 @@
                 </div>
             </div>
             <div class="col-12 col-lg-10 shadow py-4">
-                <h1 class="section-title-side"><span>Blank</span></h1>
+                <h1 class="section-title-side"><span>Bids List</span></h1>
+                <div class="row mb-4">
+                    <div class="col-12 col-md-6 col-lg-4 my-2">
+                        <div
+                            class="dropdown d-flex align-items-md-center align-items-start  justify-content-between flex-column flex-md-row">
+                            <span class="mr-4">Date</span>
+                            <button class="btn btn-secondary  dropdown-toggle flex-fill w-100" type="button" id="dropdownMenuButton"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Recent to Older
+                            </button>
+                            <div class="dropdown-menu w-100" aria-labelledby="dropdownMenuButton">
+                                <a class="dropdown-item active" href="#">Recent to Older</a>
+                                <a class="dropdown-item" href="#">Older to Recent</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 my-2">
+                        <div
+                            class="dropdown d-flex align-items-md-center align-items-start  justify-content-between flex-column flex-md-row">
+                            <span class="mr-4">Service</span>
+                            <button class="btn btn-secondary  dropdown-toggle flex-fill w-100" type="button" id="dropdownMenuButton"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Translation
+                            </button>
+                            <div class="dropdown-menu w-100" aria-labelledby="dropdownMenuButton">
+                                <a class="dropdown-item active" href="#">Recent to Older</a>
+                                <a class="dropdown-item" href="#">Older to Recent</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 my-2">
+                        <div
+                            class="dropdown d-flex align-items-md-center align-items-start  justify-content-between flex-column flex-md-row">
+                            <span class="mr-4">Status</span>
+                            <button class="btn btn-secondary  dropdown-toggle flex-fill w-100" type="button" id="dropdownMenuButton"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                All
+                            </button>
+                            <div class="dropdown-menu w-100" aria-labelledby="dropdownMenuButton">
+                                <a class="dropdown-item active" href="#">Recent to Older</a>
+                                <a class="dropdown-item" href="#">Older to Recent</a>
+                            </div>
+                        </div>
+                    </div>
+                
+                    <div class="col-12 col-md-6 col-lg-4 my-2"></div>
+                </div>
                 <div class="row card bids-options-wrapper">
                     <div class="col-12 p-0">
                         <div class="nav flex-sm-row nav-pills " id="v-pills-tab" role="tablist"
@@ -370,23 +416,8 @@
                                                 pending on approval
                                             </span>
 
-                                            <a class="btn nz-btn-gold btn-sm" px-2 role="button" data-toggle="collapse"
-                                                data-target="#collapseBid2" aria-expanded="false"
-                                                aria-controls="collapseBid2">Show
-                                                Details</a>
-                                        </div>
-                                        <div class="mt-3 collapse multi-collapse" id="collapseBid2">
-                                            <div class="card">
-                                                <div class="card-body">
-                                                    Anim pariatur cliche reprehenderit, enim eiusmod high
-                                                    life
-                                                    accusamus terry
-                                                    richardson ad squid. Nihil anim keffiyeh helvetica,
-                                                    craft
-                                                    beer labore wes
-                                                    anderson cred nesciunt sapiente ea proident.
-                                                </div>
-                                            </div>
+                                            <a class="btn nz-btn-gold btn-sm" px-2 role="button"
+                                                href="orderDetails.html">Show Order</a>
                                         </div>
                                     </div>
 
@@ -404,23 +435,8 @@
                                             <span class=" badge badge-pill badge-success align-self-end">
                                                 Sent to Customer
                                             </span>
-                                            <a class="btn nz-btn-gold btn-sm" px-2 role="button" data-toggle="collapse"
-                                                data-target="#collapseBid2" aria-expanded="false"
-                                                aria-controls="collapseBid2">Show
-                                                Details</a>
-                                        </div>
-                                        <div class="mt-3 collapse multi-collapse" id="collapseBid2">
-                                            <div class="card">
-                                                <div class="card-body">
-                                                    Anim pariatur cliche reprehenderit, enim eiusmod high
-                                                    life
-                                                    accusamus terry
-                                                    richardson ad squid. Nihil anim keffiyeh helvetica,
-                                                    craft
-                                                    beer labore wes
-                                                    anderson cred nesciunt sapiente ea proident.
-                                                </div>
-                                            </div>
+                                            <a class="btn nz-btn-gold btn-sm" px-2 role="button"
+                                                href="orderDetails.html">Show Order</a>
                                         </div>
                                     </div>
 
@@ -438,23 +454,8 @@
                                             <span class=" badge badge-pill badge-success align-self-end">
                                                 Sent to Customer
                                             </span>
-                                            <a class="btn nz-btn-gold btn-sm" px-2 role="button" data-toggle="collapse"
-                                                data-target="#collapseBid2" aria-expanded="false"
-                                                aria-controls="collapseBid2">Show
-                                                Details</a>
-                                        </div>
-                                        <div class="mt-3 collapse multi-collapse" id="collapseBid2">
-                                            <div class="card">
-                                                <div class="card-body">
-                                                    Anim pariatur cliche reprehenderit, enim eiusmod high
-                                                    life
-                                                    accusamus terry
-                                                    richardson ad squid. Nihil anim keffiyeh helvetica,
-                                                    craft
-                                                    beer labore wes
-                                                    anderson cred nesciunt sapiente ea proident.
-                                                </div>
-                                            </div>
+                                            <a class="btn nz-btn-gold btn-sm" px-2 role="button"
+                                                href="orderDetails.html">Show Order</a>
                                         </div>
                                     </div>
 
