--- a/provider/finance.html
+++ b/provider/finance.html
@@ -65,7 +65,7 @@
         <div class="row px-3">
             <div class="side-navbar col-12 col-lg-2 flex-sm-row flex-md-row overflow-auto">
                 <div class="list-group " id="mainTabs" role="tablist">
-                    <a href="dashboad.html" class="list-group-item list-group-item-action active">
+                    <a href="dashboad.html" class="list-group-item list-group-item-action ">
                         <i class="far fa-star fa-2x mr-2"></i>
                         <span>Dashboard</span>
                     </a>
@@ -77,7 +77,7 @@
                         <i class="fas fa-shopping-cart fa-2x mr-2"></i>
                         <span>Orders</span>
                     </a>
-                    <a href="finance.html" class="list-group-item list-group-item-action ">
+                    <a href="finance.html" class="list-group-item list-group-item-action active">
                         <i class="fas fa-coins fa-2x mr-2"></i>
                         <span>Finaice</span>
                     </a>
@@ -92,7 +92,117 @@
                 </div>
             </div>
             <div class="col-12 col-lg-10 shadow py-4">
-                <h1 class="section-title-side"><span>Blank</span></h1>
+                <h1 class="section-title-side"><span>Invoices List</span></h1>
+                <!-- <div class=" row">
+                    <div class="col-12 col-md-4 offset-md-8">
+                        <a href="payment.html"
+                            class="btn btn-block mb-3 nz-btn-gold btn-lg text-uppercase font-weight-bold ">
+                            + Create New
+                        </a>
+                    </div>
+                </div> -->
+                <div class="row mb-4">
+                    <div class="col-12 col-md-6 col-lg-4 my-2">
+                        <div
+                            class="dropdown d-flex align-items-md-center align-items-start  justify-content-between flex-column flex-md-row">
+                            <span class="mr-4">Date</span>
+                            <button class="btn btn-secondary  dropdown-toggle flex-fill w-100" type="button"
+                                id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
+                                aria-expanded="false">
+                                Recent to Older
+                            </button>
+                            <div class="dropdown-menu w-100" aria-labelledby="dropdownMenuButton">
+                                <a class="dropdown-item active" href="#">Recent to Older</a>
+                                <a class="dropdown-item" href="#">Older to Recent</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 my-2">
+                        <div
+                            class="dropdown d-flex align-items-md-center align-items-start  justify-content-between flex-column flex-md-row">
+                            <span class="mr-4">Service</span>
+                            <button class="btn btn-secondary  dropdown-toggle flex-fill w-100" type="button"
+                                id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
+                                aria-expanded="false">
+                                Translation
+                            </button>
+                            <div class="dropdown-menu w-100" aria-labelledby="dropdownMenuButton">
+                                <a class="dropdown-item active" href="#">Recent to Older</a>
+                                <a class="dropdown-item" href="#">Older to Recent</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 my-2">
+                        <div
+                            class="dropdown d-flex align-items-md-center align-items-start  justify-content-between flex-column flex-md-row">
+                            <span class="mr-4">Status</span>
+                            <button class="btn btn-secondary  dropdown-toggle flex-fill w-100" type="button"
+                                id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
+                                aria-expanded="false">
+                                All
+                            </button>
+                            <div class="dropdown-menu w-100" aria-labelledby="dropdownMenuButton">
+                                <a class="dropdown-item active" href="#">Recent to Older</a>
+                                <a class="dropdown-item" href="#">Older to Recent</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-12 col-md-6 col-lg-4 my-2"></div>
+                </div>
+                <ul class="list-group">
+                    <li class="list-group-item invoice-card my-2"> <a href="invoiceDetails.html"
+                            class="py-3 d-flex flex-column flex-sm-column flex-md-row justify-content-between align-items-center text-dark text-decoration-none">
+                            <span class="align-self-start font-weight-bold">
+                                <i class="fas fa-chevron-circle-right mr-2"></i> #78476347932
+                            </span>
+                            <span>300 USD</span>
+                            <span>Paypal</span>
+                            <span>8/21/2019 11:53:36 AM</span>
+                            <span class=" badge badge-pill badge-success align-self-end">Paid</span></a>
+                    </li>
+                    <li class="list-group-item invoice-card my-2 border border-warning">
+                        <a href="invoiceDetails.html"
+                            class="py-3 d-flex flex-column flex-sm-column flex-md-row justify-content-between align-items-center text-dark text-decoration-none">
+                            <span class="align-self-start font-weight-bold">
+                                <i class="fas fa-chevron-circle-right mr-2"></i> #78476347932
+                            </span>
+                            <span>300 USD</span>
+                            <span>Paypal</span>
+                            <span>8/21/2019 11:53:36 AM</span>
+                            <span class=" badge badge-pill badge-danger align-self-end">Unpaid</span></a>
+                    </li>
+                    <li class="list-group-item invoice-card my-2"> <a href="invoiceDetails.html"
+                            class="py-3 d-flex flex-column flex-sm-column flex-md-row justify-content-between align-items-center text-dark text-decoration-none">
+                            <span class="align-self-start font-weight-bold">
+                                <i class="fas fa-chevron-circle-right mr-2"></i> #78476347932
+                            </span>
+                            <span>300 USD</span>
+                            <span>Paypal</span>
+                            <span>8/21/2019 11:53:36 AM</span>
+                            <span class=" badge badge-pill badge-success align-self-end">Paid</span></a>
+                    </li>
+                    <li class="list-group-item invoice-card my-2"> <a href="invoiceDetails.html"
+                            class="py-3 d-flex flex-column flex-sm-column flex-md-row justify-content-between align-items-center text-dark text-decoration-none">
+                            <span class="align-self-start font-weight-bold">
+                                <i class="fas fa-chevron-circle-right mr-2"></i> #78476347932
+                            </span>
+                            <span>300 USD</span>
+                            <span>Paypal</span>
+                            <span>8/21/2019 11:53:36 AM</span>
+                            <span class=" badge badge-pill badge-success align-self-end">Paid</span></a>
+                    </li>
+                    <li class="list-group-item invoice-card my-2"> <a href="invoiceDetails.html"
+                            class="py-3 d-flex flex-column flex-sm-column flex-md-row justify-content-between align-items-center text-dark text-decoration-none">
+                            <span class="align-self-start font-weight-bold">
+                                <i class="fas fa-chevron-circle-right mr-2"></i> #78476347932
+                            </span>
+                            <span>300 USD</span>
+                            <span>Paypal</span>
+                            <span>8/21/2019 11:53:36 AM</span>
+                            <span class=" badge badge-pill badge-success align-self-end">Paid</span></a>
+                    </li>
+                </ul>
 
             </div>
         </div>
