--- a/provider/invoiceDetails.html
+++ b/provider/invoiceDetails.html
@@ -65,7 +65,7 @@
         <div class="row px-3">
             <div class="side-navbar col-12 col-lg-2 flex-sm-row flex-md-row overflow-auto">
                 <div class="list-group " id="mainTabs" role="tablist">
-                    <a href="dashboad.html" class="list-group-item list-group-item-action active">
+                    <a href="dashboad.html" class="list-group-item list-group-item-action ">
                         <i class="far fa-star fa-2x mr-2"></i>
                         <span>Dashboard</span>
                     </a>
@@ -77,7 +77,7 @@
                         <i class="fas fa-shopping-cart fa-2x mr-2"></i>
                         <span>Orders</span>
                     </a>
-                    <a href="finance.html" class="list-group-item list-group-item-action ">
+                    <a href="finance.html" class="list-group-item list-group-item-action active">
                         <i class="fas fa-coins fa-2x mr-2"></i>
                         <span>Finaice</span>
                     </a>
@@ -92,8 +92,91 @@
                 </div>
             </div>
             <div class="col-12 col-lg-10 shadow py-4">
-                <h1 class="section-title-side"><span>Blank</span></h1>
+                <h1 class="section-title-side"><span>Invoice #78476347932</span></h1>
+                <div class="row">
 
+                    <div class="col-12 mb-4 col-md-12 order-details-wrapper">
+                        <div class=" row">
+                            <div class="col-12 col-md-9 offset-md-3">
+                                <div class="row">
+                                    <div class="col-12 col-md-6 offset-md-6">
+                                        <a href="payment.html"
+                                            class="btn btn-block mb-3 nz-btn-gold btn-lg text-uppercase font-weight-bold ">
+                                            Collect Now
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-3">Creation Date</label>
+                            <label class="col-12 col-md-9">8/21/2019 11:53:36 AM</label>
+                        </div>
+
+                        <div class="form-group row">
+                            <label class="col-3">Customer Name</label>
+                            <label class="col-12 col-md-9">
+                                Marawan abd el Mageed Co.
+                            </label>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-3">Status</label>
+                            <div class="col-12 col-md-9">
+                                <span class=" badge badge-pill badge-danger">UnPaid</span></a>
+                            </div>
+                        </div>
+
+                        <div class="form-group row">
+                            <label class="col-3">Items</label>
+                            <div class="col-12 col-md-9">
+                                <ul class="list-group">
+                                    <li class="list-group-item order-card my-2"> <a href="orderDetails.html"
+                                            class="py-3 d-flex flex-column flex-sm-column flex-md-row justify-content-between align-items-center text-dark text-decoration-none"><span
+                                                class="align-self-start font-weight-bold"><i
+                                                    class="fas fa-chevron-circle-right mr-2"></i>#78476347932</span>
+                                            <span>Legal Translation</span>
+                                            <span>300 USD</span>
+                                            <span
+                                                class=" badge badge-pill badge-success align-self-end">Completed</span>
+                                        </a>
+                                    </li>
+                                    <li class="list-group-item order-card my-2"> <a href="orderDetails.html"
+                                            class="py-3 d-flex flex-column flex-sm-column flex-md-row justify-content-between align-items-center text-dark text-decoration-none"><span
+                                                class="align-self-start font-weight-bold"><i
+                                                    class="fas fa-chevron-circle-right mr-2"></i>#78476347932</span>
+                                            <span>Legal Translation</span>
+                                            <span>300 USD</span>
+                                            <span
+                                                class=" badge badge-pill badge-success align-self-end">Completed</span>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-3">Amount</label>
+                            <div class="col-12 col-md-9">
+                                <div class="lead"><span class="font-weight-bold">
+                                        600
+                                    </span> USD</div>
+                            </div>
+                        </div>
+                        <div class="d-block d-sm-none row">
+                            <div class="col-12 col-md-9 offset-md-3">
+                                <div class="row">
+                                    <div class="col-12">
+                                        <a href="payment.html"
+                                            class="btn btn-block mb-3 nz-btn-gold btn-lg text-uppercase font-weight-bold ">
+                                            Collect Now
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
+                    </div>
+                </div>
             </div>
         </div>
     </section>
