--- a/provider/orderDetails.html
+++ b/provider/orderDetails.html
@@ -65,7 +65,7 @@
         <div class="row px-3">
             <div class="side-navbar col-12 col-lg-2 flex-sm-row flex-md-row overflow-auto">
                 <div class="list-group " id="mainTabs" role="tablist">
-                    <a href="dashboad.html" class="list-group-item list-group-item-action active">
+                    <a href="dashboad.html" class="list-group-item list-group-item-action ">
                         <i class="far fa-star fa-2x mr-2"></i>
                         <span>Dashboard</span>
                     </a>
@@ -73,7 +73,7 @@
                         <i class="fas fa-briefcase fa-2x mr-2"></i>
                         <span>Bids</span>
                     </a>
-                    <a href="orders.html" class="list-group-item list-group-item-action ">
+                    <a href="orders.html" class="list-group-item list-group-item-action active">
                         <i class="fas fa-shopping-cart fa-2x mr-2"></i>
                         <span>Orders</span>
                     </a>
@@ -202,7 +202,22 @@
                                 </ul>
                             </div>
                         </div>
+                        <div class="row">
+                            <div class="col-12 col-md-6">
+                                <a href="payment.html"
+                                    class="btn btn-block nz-btn-gold btn-lg text-uppercase font-weight-bold ">
+                                    Create separate invoice
+                                </a>
+                            </div>
+                            <div class="col-12 col-md-6">
+                                <a href="payment.html"
+                                    class="btn btn-block btn-outline-gold  btn-lg text-uppercase font-weight-bold ">
+                                    Add to Current month
+                                </a>
+                            </div>
+                        </div>
                     </div>
+
 
                     <div class="col-12 mb-4 col-md-4 order-updates-wrapper">
                         <h1 class="section-title-side"><span>Updates</span></h1>
